--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -148,11 +148,11 @@ Audience: For those with previous experience of R and the tidyverse including th
 
 .font60[
 
-[3. RStudio Projects](03_rstudio_projects.html)  
+[3. Project-oriented workflow](03_rstudio_projects.html)  
 Audience: Those without experience of RStudio projects
-* Organising your work in a logical, consistent and reproducible way using RStudio Projects  
-* Organisation of data  
-* Organisation of analyses  
+* Organising your work in a logical, consistent and reproducible way
+* Working directories and paths    
+* Using RStudio Projects  
 * Writing code with relative paths given appropriate to your project organisation  
 * Writing dataframes and figures to file  
 
@@ -308,9 +308,9 @@ class: inverse
 ---
 # Further Reading
 
-* "Ten simple rules for reproducible computational research" (Sandve Nekrutenko, et al., 2013)  
-* "Best practices for scientific computing" (Wilson Aruliah, et al., 2014)  
-* "Good enough practices in scientific computing" (Wilson Bryan, et al., 2017)  
+* "Ten simple rules for reproducible computational research" (Sandve Nekrutenko et al., 2013)  
+* "Best practices for scientific computing" (Wilson Aruliah et al., 2014)  
+* "Good enough practices in scientific computing" (Wilson Bryan et al., 2017)  
 * "Excuse Me, Do You Have a Moment to Talk About Version Control?" (Bryan, 2018)  
 
 ---
