--- a/slides/06_r_markdown_for_reproducible_reports.html
+++ b/slides/06_r_markdown_for_reproducible_reports.html
@@ -81,30 +81,6 @@ By the end of this session you'll be able to do something like this:
 demo.....
 
 
-
----
-# Reproducible Reports
-
-
-
-
-How do you work?
-
-* What program do you analyse your data in?  
-* What program do you plot your data in?  
---
-
-&lt;img src="06_r_markdown_for_reproducible_reports_files/figure-html/unnamed-chunk-2-1.png" width="648" /&gt;
-
----
-# Reproducible Reports
-
-
-* What program do you use to write up the results to submit to a journal (or similar)?
-
-&lt;img src="06_r_markdown_for_reproducible_reports_files/figure-html/unnamed-chunk-3-1.png" width="648" /&gt;
-
-
 ---
 # Reproducible Reports
 
@@ -136,7 +112,7 @@ background-size: 180px
 
 # Reproducible Reports
 
-The brilliance of R Markdown (Allaire Xie et al., 2019) is that you can use a **single R Markdown file** to:
+The brilliance of R Markdown (Allaire Xie, et al., 2019) is that you can use a **single R Markdown file** to:
 
 * save and execute code  
 
@@ -391,7 +367,7 @@ Add a section of text for Methods
 
 This should render as something like:
 
-We used R (R Core Team, 2022) with tidyverse packages (Wickham Averick et al., 2019) for all analyses.
+We used R (R Core Team, 2022) with tidyverse packages (Wickham Averick, et al., 2019) for all analyses.
 
 ---
 # Add a code chunk
@@ -821,7 +797,7 @@ Suggestions:
 
 * RStudio’s guide http://rmarkdown.rstudio.com/index.html  
 
-* R Markdown: The Definitive Guide (Xie Allaire et al., 2018) https://bookdown.org/yihui/rmarkdown/   
+* R Markdown: The Definitive Guide (Xie Allaire, et al., 2018) https://bookdown.org/yihui/rmarkdown/   
  
 * bookdown: Authoring Books and Technical Documents with R Markdown (Xie, 2023) https://bookdown.org/yihui/bookdown/  
 
