--- a/slides/01_with_survey.html
+++ b/slides/01_with_survey.html
@@ -21,31 +21,33 @@
 
 
 
-# Survey results 1/4
 
 
-The distribution of ratings you (n = 27) gave in the survey were:
-&lt;img src="01_with_survey_files/figure-html/unnamed-chunk-2-1.png" width="432" /&gt;
+
+
+# Survey results 1/4 (n = 28)
+
+&lt;img src="01_with_survey_files/figure-html/unnamed-chunk-2-1.png" width="864" /&gt;
 
 
 ---
-# Survey results 2/4
+# Survey results 2/4 (n = 28)
 
 
 
 &lt;img src="01_with_survey_files/figure-html/unnamed-chunk-3-1.png" width="864" /&gt;
 
 ---
-# Survey results 3/4
+# Survey results 3/4 (n = 28)
 
 ## Current
 
-&lt;img src="01_with_survey_files/figure-html/unnamed-chunk-4-1.png" width="864" /&gt;
+&lt;img src="01_with_survey_files/figure-html/unnamed-chunk-4-1.png" width="936" /&gt;
 
 
 
 ---
-# Survey results 4/4
+# Survey results 4/4 (n = 28)
 Please rate your level of comfort with...
 
 &lt;img src="01_with_survey_files/figure-html/unnamed-chunk-5-1.png" width="864" /&gt;
