update index slide to quarto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ class: center, middle, inverse, title-slide
 3. [Project-oriented workflow](slides/03_rstudio_projects.html)  
 4. [Tidying data and the tidyverse including the pipe](slides/04_tidying_data_and_the_tidyverse.html)
 5. [Advanced data import](slides/05_advanced_data_import.html)  
-6. [R Markdown for Reproducible Reports](slides/06_r_markdown_for_reproducible_reports.html)  
+6. [Quarto for Reproducible Reports](....)  
   
 ---
 # Introduction to Reproducibility in R
